test/replaceIndexOutOfBounds2.slq

def main() {
	x := vector(3, 0:!B);
	x[3] := H(x[3]); /// error
	return x:!ğ”¹^3;
}
